Mis mensajes, interaccion entre mi lista de amigos y la ventana de mensaje privado

--- a/PL-BlutBad/client/templates/mis-mensajes-t.html
+++ b/PL-BlutBad/client/templates/mis-mensajes-t.html
@@ -39,7 +39,7 @@
 		<div id="outbox">
 			<div id="outbox-header">
 				<p>
-					Enviar a: <strong>{{toSend}}</strong>  
+					Enviar a <strong>{{toSend}}</strong>  
 				</p> 
 			</div>
 			<textarea rows="4" cols="50" id="outbox-msg"></textarea>
