--- a/PL-BlutBad/client/templates/shop.html
+++ b/PL-BlutBad/client/templates/shop.html
@@ -1,7 +1,10 @@
 <template name="tienda">
 	{{#if show}}
-		<h1>Tienda</h1>
+		<h1>Premium</h1>
   		{{#if currentUser}}
+  			<p>Aquí podrás cambiar tus puntos por ISI-COINS nuestra moneda oficial con la que podrás comprar un montón de ventajas para tus juegos favoritos</p>
+  			<p>Cada 100 puntos se cambiarán por 1 ISI-COIN, por cada 10 ISI-COINS podrás comprar una ventaja. Cada vez que tengas los puntos y/o ISI-COINS se mostrarán botones donde poder cambiarlos </p>
+  			<p>Aprovechate con nuestras ventajas</p>
 			<h2>Total puntos: {{total}}</h2>
 			<h2> Total ISI-Coins: {{isicoins}}</h2>
 			{{#if icambiar}}
@@ -16,7 +19,13 @@
 				{{/each}}}
 			
 			{{/if}}
-			
+		{{else}}	
+			<div id="notRegisterDialog">
+			  	<p>
+			  		Debes estar registrado en la aplicación.
+			  	</p>
+			</div>
 		{{/if}}
+
 	{{/if}}
 </template> 
