--- a/PL-LowerLayers/prototipo-5/style/client.css
+++ b/PL-LowerLayers/prototipo-5/style/client.css
@@ -1,9 +1,14 @@
 html{
     margin: auto;
     font-family: verdana, sans-serif;
-    background-color: #2E2E2E;
     color: white;
 	
+}
+
+
+body{
+	background-image: url("/backgrounds/21.jpg");
+	background-color: #2E2E2E; 
 }
 
 button{
@@ -224,4 +229,11 @@ input:focus{
 }
 #avatar-slider img:nth-child(1){
 	display: block;
+}
+
+.ui-autocomplete {
+	max-height: 100px;
+	overflow-y: auto;
+	/* prevent horizontal scrollbar */
+	overflow-x: hidden;
 }
