--- a/PL-BlutBad/public/css/default.css
+++ b/PL-BlutBad/public/css/default.css
@@ -904,3 +904,26 @@ td, th {
 #mitor, #nuevaPartida {
 	text-decoration: none;
 }
+
+
+/* sigma.js context : */
+.sigma-parent {
+	border-radius: 4px;
+	-moz-border-radius: 4px;
+	-webkit-border-radius: 4px;
+	background: #222;
+	height: 350px;
+	width: 600px;
+}
+.sigma-expand {
+	width: 100%;
+	height: 100%;
+	top: 0;
+	left: 0;
+}
+.buttons-container{
+	padding-bottom: 8px;
+	padding-top: 8px;
+	padding-left: 5px;
+	padding-right: 5px;
+}
