Mis mensajes, captura del mensaje y definicion de la colección

--- a/PL-BlutBad/client/templates/mis-mensajes-t.html
+++ b/PL-BlutBad/client/templates/mis-mensajes-t.html
@@ -48,5 +48,10 @@
 				<input type="button" id="outbox-cancel" class="btn btn-primary" value="Cancelar">
 			</div>
 		</div>
+		<div id="notMsg" title="Bandeja de Salida" style="display:none">
+			<p>
+				Debes escribir tu mensaje antes de enviar.
+			</p>
+		</div>
 	{{/if}}
 </template>
