Añadido WEB-RTC

--- a/PL-BlutBad/client/templates/juegos-t.html
+++ b/PL-BlutBad/client/templates/juegos-t.html
@@ -36,6 +36,7 @@
 
 
 <template name="idnClarca">  
+  	{{>webRTC}} 
     <canvas id='CanvasclarcaGame' width='800' height='600'></canvas>
 
         <audio id="sonidojuego">
