Comentarios a los torneos

--- a/PL-BlutBad/client/templates/hall-torneo-t.html
+++ b/PL-BlutBad/client/templates/hall-torneo-t.html
@@ -30,6 +30,8 @@
             <a href="" class="btn btn-large btn-info multiMenuTorneo {{multiMenuTorneoActive}}" data-toggle="tab">{{name}}</a>
           {{/each}}
         </div>
+
+        {{>torComments}}
   
         {{#if showEtapasTorneo}}
               {{#if showIfAdmin}}
