Organización de public

--- a/PL-LowerLayers/prototipo-5/style/froot-wars.css
+++ b/PL-LowerLayers/prototipo-5/style/froot-wars.css
@@ -2,7 +2,7 @@
 
     width:640px;
     height:480px;
-    background: url(../images/splashscreen.png);
+    background: url(../Frootwars/images/splashscreen.png);
     border: 1px solid black;
 }
 
@@ -33,7 +33,7 @@
 #levelselectscreen input {
     margin:20px;
     cursor:pointer;
-    background:url(../images/icons/level.png) no-repeat;
+    background:url(../Frootwars/images/icons/level.png) no-repeat;
     color:yellow;
     font-size: 20px;
     width:64px;
@@ -51,7 +51,7 @@
     text-align:center;
     height:48px;
     color:white;
-    background:url(../images/loader.gif) no-repeat center;
+    background:url(../Frootwars/images/loader.gif) no-repeat center;
     font:12px Arial;
 }
 
