--- a/PL-LowerLayers/prototipo-5/style/client.css
+++ b/PL-LowerLayers/prototipo-5/style/client.css
@@ -7,7 +7,7 @@ html{
 
 
 body{
-	background-image: url("/backgrounds/21.jpg");
+	background-image: url("/backgrounds/wallpaper.jpg");
 	background-color: #2E2E2E; 
 }
 
