Solucionado bug de 'Mi perfil'

--- a/PL-BlutBad/client/templates/profile-t.html
+++ b/PL-BlutBad/client/templates/profile-t.html
@@ -2,7 +2,7 @@
 	{{#if showprofile}}
 		{{#if registrado}}
 
-			<div id="profile-container">
+			<div id="profileContainer">
 
 				<h1>Perfil de Usuario</h1>
 
