Cambio de rangos

--- a/PL-BlutBad/client/templates/dashboard-t.html
+++ b/PL-BlutBad/client/templates/dashboard-t.html
@@ -9,12 +9,14 @@
 		<p><strong>Web-RTC esta aqui para que sea mas facil depurar sus estilo css, no tener que crear una partida, despues de depurar el css o lo que sea necesario, quitar Web-RTC del Dashboard.</strong>
 		</p>
 		{{>webRTC}}
+
+		{{>misInsignias}}
 		
 	{{/if}}
 </template> 
 
 
-<!--
+
 <template name="misInsignias">
 <div class="well">
 	<h2>Insignias conseguidas en los juegos:</h2>
@@ -46,4 +48,3 @@
 
 </template> 
 
--->
