--- a/PL-BlutBad/client/templates/user-menu-t.html
+++ b/PL-BlutBad/client/templates/user-menu-t.html
@@ -1,7 +1,9 @@
 <template name="user_menu">
-	<ul>
-		{{#each user_menu}}
-			<li class="{{current}}"><a href="">{{name}}</a></li> 
-		{{/each}}
-	</ul> 
+	{{#if currentUser}}
+		<ul>
+			{{#each user_menu}}
+				<li class="{{current}}"><a href="">{{name}}</a></li> 
+			{{/each}}
+		</ul>
+	{{/if}}	
 </template>
