Mejoras de la plataforma v2

--- a/PL-BlutBad/client/templates/ranking-t.html
+++ b/PL-BlutBad/client/templates/ranking-t.html
@@ -28,7 +28,7 @@
     			{{>sigmaGraphic}}
          {{#each juegos}}
              {{#if anyGamer _id}}
-                <div class="well">
+                <div class="well wellRanking">
                 <h3>{{name}}</h3>
                             <table class="table">
                               <thead>
