--- a/PL-BlutBad/client/templates/hall-clarcassone-t.html
+++ b/PL-BlutBad/client/templates/hall-clarcassone-t.html
@@ -71,40 +71,42 @@ http://bootsnipp.com/snippets/featured/condensed-table-example -->
 		  <div class="span5 well">
         <h3>{{tipo_partys}}</h3>
 		    {{#each partidasVolatiles}}
-          <table class="table table-striped table-condensed">
-            <thead>
-              <tr>
-                <th>Username</th>
-                <th>Rango</th>
-                <th>Role</th>
-                <th>Status</th>                                          
-              </tr>
-            </thead>   
-            <tbody>
-              {{#each jugadores}}
+          {{#if torneo_user}}
+            <table class="table table-striped table-condensed">
+              <thead>
                 <tr>
-                  <td>{{getUsername this.user_id}}</td>
-                  <td>{{userRango this.user_id}}</td>
-                  <td>{{rol this.user_id ../this._id}}</td>
-                  <td><span class="{{estadoUser this.estado}}">{{this.estado}}</span>
-                  </td>                                       
+                  <th>Username</th>
+                  <th>Rango</th>
+                  <th>Role</th>
+                  <th>Status</th>                                          
                 </tr>
-              {{/each}}           
-            </tbody>
-          </table>
-          {{#if currentUser}}
-            <div class="btn-toolbar">
-              {{#if show_ready}}
-                <button class="btn ready">{{estadoUserAct this._id}}</button>
-              {{/if}}
-              {{#if noTorneo}}
-                {{#if show_ab this._id}}
-        		      <button class="btn unirme">{{unir_aband this._id}}</button>
+              </thead>   
+              <tbody>
+                {{#each jugadores}}
+                  <tr>
+                    <td>{{getUsername this.user_id}}</td>
+                    <td>{{userRango this.user_id}}</td>
+                    <td>{{rol this.user_id ../this._id}}</td>
+                    <td><span class="{{estadoUser this.estado}}">{{this.estado}}</span>
+                    </td>                                       
+                  </tr>
+                {{/each}}           
+              </tbody>
+            </table>
+            {{#if currentUser}}
+              <div class="btn-toolbar">
+                {{#if show_ready}}
+                  <button class="btn ready">{{estadoUserAct this._id}}</button>
                 {{/if}}
-                <button id = "{{muestro_oculto this._id}}" class="btn startparty">Empezar</button>
-                <button id = "{{muestro_oculto this._id}}" class="btn removeparty">Descartar</button>
-              {{/if}}
-  	        </div>
+                {{#if noTorneo}}
+                  {{#if show_ab this._id}}
+          		      <button class="btn unirme">{{unir_aband this._id}}</button>
+                  {{/if}}
+                  <button id = "{{muestro_oculto this._id}}" class="btn startparty">Empezar</button>
+                  <button id = "{{muestro_oculto this._id}}" class="btn removeparty">Descartar</button>
+                {{/if}}
+    	        </div>
+            {{/if}}
           {{/if}}
         {{/each}}
       </div>            
