--- a/PL-BlutBad/public/css/shop.css
+++ b/PL-BlutBad/public/css/shop.css
@@ -1,19 +1,15 @@
 #tiendacontainer {
-	background-color: #CEE3F6;
-	border-radius: 10px;
-	border: black 1px solid; 
-	width: 95%;
-	height: 620px;
+	width: 96%;
 	margin: 15px;
 	padding: 5px;
 }
 
 #shop {
-	background-color: white;
+	background-color: #F2F2F2;
+	border: #BDBDBD 1px solid;
+	border-radius: 3px;
 	margin: 10px 3px 5px 3px;
 	height: 435px;
-	width: 99%;
-	padding: 25px 2px 5px 2px;
-	border-radius: 3px;
-	border: #6E6E6E 1px solid;
+	width: 95%;
+	padding: 30px;
 }
