puesto terminos y condiciones d uso (aunq aun no funciona) y el copyright

--- a/PL-BlutBad/client/templates/aiuto.html
+++ b/PL-BlutBad/client/templates/aiuto.html
@@ -52,7 +52,7 @@
 				</p>
 				<p></p>
 				<p class="azul">
-					Para cualquier duda o sugerencia contacta con nuestro servicio técnico en admin@blutbad.com o por teléfono +34678912345.
+					Para cualquier duda o sugerencia contacta con nuestro servicio técnico en admin@blutbad.com o por teléfono (+34)678912345.
 				</p>
 			</div>
 		</div>
