terminos y condiciones y correo de contacto

--- a/PL-BlutBad/client/templates/aiuto.html
+++ b/PL-BlutBad/client/templates/aiuto.html
@@ -48,11 +48,14 @@
 				</p>
 				<p></p>
 				<p class="verde">
-					No olvides écharle un vistazo a Términos y Condiciones de Uso.
+					No olvides écharle un vistazo a <a class="terms">Términos y Condiciones</a>.
+					{{#if showterms}}
+                		{{> terms}}
+        			{{/if}}
 				</p>
 				<p></p>
 				<p class="azul">
-					Para cualquier duda o sugerencia contacta con nuestro servicio técnico en admin@blutbad.com o por teléfono (+34)678912345.
+					Para cualquier duda o sugerencia contacta con nuestro servicio técnico en <a href="mailto:itziar276@live.com" target="_blank">admin@blutbad.com</a> o por teléfono al: <a href="tel:+34912345678">(+34)912345678</a>, o si lo prefiere por Skype o cualquier sistema de mensajería instantánea al <a href="callto://+34678912345"> +34 678912345</a>.
 				</p>
 			</div>
 		</div>
