--- a/PL-BlutBad/client/templates/dashboard-t.html
+++ b/PL-BlutBad/client/templates/dashboard-t.html
@@ -3,14 +3,13 @@
 		<h1>Dashboard</h1> 
 		<input type="button" class="crea_party" value="Crea una partida Clarcassone!">
 			
-		<p> --------------------</p>
+		<!-- <div>
+			<p><strong>Web-RTC esta aqui para que sea mas facil depurar sus estilo css, no tener que crear una partida, despues de depurar el css o lo que sea necesario, quitar Web-RTC del Dashboard.</strong>
+			</p>
+			{{>webRTC}}
 
-		<p> --------------------</p>
-		<p><strong>Web-RTC esta aqui para que sea mas facil depurar sus estilo css, no tener que crear una partida, despues de depurar el css o lo que sea necesario, quitar Web-RTC del Dashboard.</strong>
-		</p>
-		{{>webRTC}}
-
-		{{>misInsignias}}
+			{{>misInsignias}}
+		</div> -->
 		
 	{{/if}}
 </template> 
