--- a/PL-BlutBad/public/css/default.css
+++ b/PL-BlutBad/public/css/default.css
@@ -954,8 +954,8 @@ td, th {
     font-size: 24px;
     color: #d17581;
 }
-
-/*#remotesVideos video {
+/*
+#remotesVideos video {
   height: 120px;
   padding-bottom: 8px;
 	padding-top: 8px;
@@ -973,41 +973,56 @@ td, th {
 */
 
 #webRTC {
+	clear: both;
 	background-color: #F2F2F2;
 	border: #BDBDBD 1px solid;
+	border-radius: 3px;
 	width: 97%;
-	height: 250px;
+	height: 310px;
 	margin: 10px;
 	padding: 10px;
 }
 
+/* Video local */
 #myVideo {
-	background-color: red;
+	background-color: white;
 	float: left;
 	width: 20%;
-	height: 230px;
-	margin: 5px;
+	height: 250px;
+	margin: 35px 3px 3px 3px;
 	padding: 5px;
 }
 
 #localVideo {
-	background-color: blue;
-	height: 220px;
-	width: 80;
-	padding-bottom: 8px;
-	padding-top: 8px;
-	padding-left: 5px;
-	padding-right: 5px;
+	background-color: white;
+	border: #BDBDBD 1px solid;
+	height: 79%;
+	width: 94%;
+	margin: 2px;
+	padding: 3px
 }
 
+/* Videos remoto */
 #remoteVideo {
-	background-color: yellow;
+	background-color: white;
 	float: left;
-	width: 75%;
-	height: 230px;
+	width: 76%;
+	height: 295px;
 	margin: 5px;
 	padding: 5px;
 }
+
+#remotesVideos video {
+	float: left;
+ 	background-color: white;
+	border: #BDBDBD 1px solid;
+	height: 100px;
+	width: 28%;
+	margin: 3px;
+	padding: 3px
+}
+
+/* Boton */
 #startWebRTC {
 	clear: both;
 }
