--- a/PL-BlutBad/public/css/default.css
+++ b/PL-BlutBad/public/css/default.css
@@ -35,7 +35,14 @@ canvas {
 }
 
 #login-buttons{
-	margin: 2%;
+	margin: 1%;
+	width: 80px;
+	background-color: #ECF8E0;
+	height: 20px;
+	border-radius: 3px;
+	text-align: center;
+	padding: 7px 2px 5px 2px;
+	border: #BDBDBD 1px solid;
 }
 /**** Link Styles ****/
 a:link,a:visited {
@@ -500,6 +507,7 @@ h2.layout {
 
 #footer-content a:hover,#footer-content a:active {
 	text-decoration: underline;
+	cursor:pointer; cursor: hand;
 }
 
 /* sub-navigation menu */
@@ -787,7 +795,7 @@ td, th {
 	margin-top: 10%;
 	float: right;
 	text-align: center;
-	width: 25%;
+	width: 22%;
 	background-color: white;
 	padding: 10px;
 }   
@@ -977,7 +985,7 @@ td, th {
 	background-color: #F2F2F2;
 	border: #BDBDBD 1px solid;
 	border-radius: 3px;
-	width: 97%;
+	width: 96%;
 	height: 310px;
 	margin: 10px;
 	padding: 10px;
@@ -1025,4 +1033,16 @@ td, th {
 /* Boton */
 #startWebRTC {
 	clear: both;
+}
+
+/* Torneos */
+
+#gamecontainer {
+    height: 1240px;
+    padding: 25px 2px 10px 2px;
+    background-color: #ECF8E0;
+    border: #BDBDBD 1px solid;
+    border-radius: 3px;
+    width: 101%;
+    margin: 1px;
 }
