compartir con face, g+ y twitter

--- a/PL-BlutBad/client/templates/dashboard-t.html
+++ b/PL-BlutBad/client/templates/dashboard-t.html
@@ -3,14 +3,16 @@
 		<h1>Dashboard</h1> 
 		<input type="button" class="crea_party" value="Crea una partida Clarcassone!">
 			
-		<!-- <div>
+		<!-- div
 			<p><strong>Web-RTC esta aqui para que sea mas facil depurar sus estilo css, no tener que crear una partida, despues de depurar el css o lo que sea necesario, quitar Web-RTC del Dashboard.</strong>
 			</p>
-			{{>webRTC}}
+			webRTC
 
-			{{>misInsignias}}
-		</div> -->
+			misInsignias
+		div -->
 		
+
+
 	{{/if}}
 </template> 
 
