--- a/PL-BlutBad/client/templates/user-menu-t.html
+++ b/PL-BlutBad/client/templates/user-menu-t.html
@@ -4,6 +4,17 @@
 			{{#each user_menu}}
 				<li class="{{current}}"><a href="">{{name}}</a></li> 
 			{{/each}}
+			<script src="http://platform.twitter.com/widgets.js" type="text/javascript"> </script>
+			<a href="http://twitter.com/share?url=http://blutbad.meteor.com" class="twitter-share-button"> <img src="/images/rrss/twitter.png" alt="Google+" width="32" height="32" /></a>
+			<a href="https://plus.google.com/share?url=http://blutbad.meteor.com"><img src="/images/rrss/gplus.png" alt="Google+" width="32" height="32" /></a>
+			<a href="http://www.facebook.com/sharer.php?u=http://blutbad.meteor.com"><img src="/images/rrss/facebook.png" alt="Facebook" width="32" height="32" /></a>
 		</ul>
+	{{else}}
+		<script src="http://platform.twitter.com/widgets.js" type="text/javascript"> </script>
+		<a href="http://twitter.com/share?url=http://blutbad.meteor.com" class="twitter-share-button"> <img src="/images/rrss/twitter.png" alt="Google+" width="32" height="32" /></a>
+		<a href="https://plus.google.com/share?url=http://blutbad.meteor.com"><img src="/images/rrss/gplus.png" alt="Google+" width="32" height="32" /></a>
+		<a href="http://www.facebook.com/sharer.php?u=http://blutbad.meteor.com"><img src="/images/rrss/facebook.png" alt="Facebook" width="32" height="32" /></a>
 	{{/if}}	
+	
+		
 </template>
