--- a/PL-BlutBad/client/templates/ranking-t.html
+++ b/PL-BlutBad/client/templates/ranking-t.html
@@ -97,12 +97,12 @@
 				
 					<div class="pagination">
 					    <ul>
-					        <li><a href="#">Prev</a></li>
-					        <li><a href="#">1</a></li>
-					        <li><a href="#">2</a></li>
-					        <li><a href="#">3</a></li>
-					        <li><a href="#">4</a></li>
-					        <li><a href="#">Next</a></li>
+					        <li class="paginator"><a href="" >Prev</a></li>
+					        <li><a href="">1</a></li>
+					        <li><a href="">2</a></li>
+					        <li><a href="">3</a></li>
+					        <li><a href="">4</a></li>
+					        <li><a href="">Next</a></li>
 					    </ul>
 					</div>
 					{{else}}
