--- a/PL-BlutBad/client/templates/hall-clarcassone-t.html
+++ b/PL-BlutBad/client/templates/hall-clarcassone-t.html
@@ -6,7 +6,7 @@ http://bootsnipp.com/snippets/featured/condensed-table-example -->
   {{#if show}}
 		<div class="full-page">		
 		<h5 id = "hidden">Juegos disponibles en la plataforma</h5>			
-		<h2>¡Creacion de partidas para el juego Clarcassone!</h2>
+		<h2>¡Creación de partidas para el juego Clarcassone!</h2>
 		<div class="gallery">
     <div class="container">
       <div class="span3 jugad_hall">
